fixed characters being squished

--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -96,9 +96,9 @@
 }
 
 
-.skill-container {
+// .skill-container {
   
-}
+// }
 
 .gemRow {
   min-height: 6em;
